test/resolver/pass/foo_lib.ms
val foo := 42;
val bar := 100;
export { foo };
