test/resolver/fail/module_circular_a.ms
import { b_val } from "module_circular_b";
val a_val := 1;
export { a_val };
